samples/_failures_safe/1761698555_4f9392_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fecbcd36.c: In function ‘main’:
./samples/SAFE/__tmp_fecbcd36.c:200:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  200 |     int token_count = token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_fecbcd36.c:200:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fecbcd36.c:200:5: error: expected ‘,’ or ‘;’ at end of input
  200 |     int token_count = token
      |     ^~~
./samples/SAFE/__tmp_fecbcd36.c:200:5: error: expected declaration or statement at end of input
